# AlbumPlayerQTver1

./: CMakeLists.txt  Main.qml  Next.qml  Plyta.qml  README.md  StaryButton.qml  dirmp3.cpp  dirmp3.h  main.cpp
images/: arrow.xcf
